# Rooti-Server

./: .env.dev.example  .env.example  .env.prod.example  .env.rds.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  README.md  README.python.md  SECURITY.md  build.gradle.kts  poetry.toml  pyproject.toml  ruff.toml  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  health.py
app/api/v1/: __init__.py  auth.py  boards.py  caregivers.py  companies.py  company_chargers.py  documents.py  job_standards.py  job_workers.py  kiosks.py  leaves.py  notifications.py  public.py  schedules.py  users.py  work_journals.py  work_records.py  workers.py
app/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  pagination.py  rate_limit.py  redis.py  response.py  router.py  security.py  tenant.py  time.py  upload_validation.py
app/integrations/: __init__.py  email.py  firebase.py  pdf.py  s3_storage.py  storage.py  xlsx.py
app/models/: __init__.py  base.py  board.py  bulk_email_job.py  caregiver.py  company.py  document.py  enums.py  job.py  journal_schedule.py  kiosk.py  leave.py  types.py  user.py  work.py  worker.py
app/schemas/: __init__.py  auth.py  board.py  caregiver.py  charger.py  common.py  company.py  document.py  job.py  journal_schedule.py  kiosk.py  leave.py  notification.py  schedule.py  user.py  worker.py  workrecord.py
app/services/: __init__.py  auth.py  board.py  caregiver.py  charger.py  company.py  document.py  job.py  journal_schedule.py  kiosk.py  leave.py  notification.py  schedule.py  user.py  worker.py  workrecord.py
docker/: Dockerfile
legacy-migration/: README.md  V1-django-to-spring.sql  V2-verify.sql  V3-drop-django-tables.sql
migrations/: V1__init_schema.sql  V4__kiosk_display_columns.sql  V5__leaves.sql  V6__journal_email_schedules.sql  V7__worker_retired_at.sql  V8__bulk_email_jobs.sql
scripts/: run_rds.sh  seed_demo.py
src/main/java/com/rooti/: RootiApplication.java
src/main/java/com/rooti/domain/auth/application/: AuthService.java  FcmTokenSync.java  TokenIssuer.java
src/main/java/com/rooti/domain/auth/infrastructure/: RefreshTokenStore.java
src/main/java/com/rooti/domain/auth/presentation/: AuthController.java
src/main/java/com/rooti/domain/board/application/: CaregiverBoardService.java  HtmlSanitizer.java
src/main/java/com/rooti/domain/board/domain/: CaregiverBoard.java
src/main/java/com/rooti/domain/board/infrastructure/: CaregiverBoardRepository.java
src/main/java/com/rooti/domain/board/presentation/: CaregiverBoardController.java
src/main/java/com/rooti/domain/caregiver/application/: CaregiverService.java
src/main/java/com/rooti/domain/caregiver/domain/: Caregiver.java  CaregiverWorkerRelation.java
src/main/java/com/rooti/domain/caregiver/infrastructure/: CaregiverRepository.java  CaregiverWorkerRelationRepository.java
src/main/java/com/rooti/domain/caregiver/presentation/: CaregiverController.java
src/main/java/com/rooti/domain/common/presentation/: PublicController.java
src/main/java/com/rooti/domain/company/application/: CompanyService.java
src/main/java/com/rooti/domain/company/domain/: Company.java  CompanyCharger.java
src/main/java/com/rooti/global/audit/: BaseEntity.java  BaseTimeEntity.java  SecurityAuditorAware.java
src/main/java/com/rooti/global/config/: AsyncConfig.java  CacheConfig.java  DataSourceUrlPostProcessor.java  FirebaseConfig.java  JpaConfig.java  LegacySchemaNamingStrategy.java  OpenApiConfig.java  RedisConfig.java  ResendProperties.java  StorageProperties.java  WebConfig.java
src/main/java/com/rooti/global/email/: EmailSender.java  LoggingEmailSender.java  ResendEmailSender.java
src/main/java/com/rooti/global/exception/: AuthAccountDisabledException.java  AuthInvalidCredentialsException.java  AuthRefreshNotFoundException.java  BusinessException.java  BusinessExceptionAdvice.java  CompanyNotFoundException.java  ErrorCode.java  GlobalExceptionHandler.java  ProblemDetailFactory.java  RoutingExceptionAdvice.java  SecurityExceptionAdvice.java  UserEmailDuplicatedException.java  UserNotFoundException.java  UserUsernameDuplicatedException.java  ValidationExceptionAdvice.java  WorkScheduleNotFoundException.java
src/main/java/com/rooti/global/jwt/: JwtAuthenticationFilter.java  JwtPayload.java  JwtTokenProvider.java
src/main/java/com/rooti/global/logging/: RequestTraceIdFilter.java
src/main/java/com/rooti/global/response/: ApiResponse.java  PageResponse.java
src/main/java/com/rooti/global/security/: AuthenticationManagerConfig.java  CorsConfig.java  CurrentUser.java  JpaUserDetailsService.java  PasswordCarryingPrincipal.java  PasswordEncoderConfig.java  PrincipalDetails.java  SecurityConfig.java  SecurityFilterChainConfig.java  SecurityProperties.java
src/main/java/com/rooti/global/util/: JsonAttributeConverter.java  Ulid.java
src/main/resources/: application-dev.yml  application-legacy.yml  application-local.yml  application-prod.yml  application-test.yml  application.yml  logback-spring.xml
src/main/resources/db/migration/: V2__seed_default_data.sql  V3__perf_indexes.sql
src/test/java/com/rooti/: RootiApplicationTests.java
src/test/java/com/rooti/global/config/: LegacySchemaNamingStrategyTest.java
src/test/java/com/rooti/global/exception/: ErrorCodeContractTest.java
src/test/java/com/rooti/global/jwt/: JwtTokenProviderTest.java
src/test/java/com/rooti/global/response/: ApiResponseTest.java
src/test/java/com/rooti/global/util/: JsonAttributeConverterTest.java
tests/: conftest.py  test_health.py  test_jwt_hardening.py  test_logging.py  test_openapi_routes.py  test_response_envelope.py  test_root_redirect.py  test_security_headers.py  test_trace_id.py  test_upload_validation.py
tests/domain/: test_auth_unit.py  test_common.py
tests/integration/: conftest.py  test_auth_flow.py  test_bulk_email_jobs.py  test_idor.py  test_schema_alignment.py  test_worker_memberships.py  test_worker_retire.py
(+122 files in other folders)
