# =============================================================================
#  Rooti-Server (Python / FastAPI) — pyproject.toml
#
#  Migration target: 점진적으로 src/main/java/com/rooti/** 를 app/** 로 치환.
#  - DB 스키마 / Flyway 마이그레이션 그대로 재사용 (src/main/resources/db/migration)
#  - API 응답 envelope 은 Java ApiResponse / PageResponse 와 1:1 동일
#  - Python 3.12, uv 패키지 매니저 권장 (poetry/pip 으로도 동작)
# =============================================================================
[project]
name = "rooti-server"
version = "1.0.0"
description = "Rooti backend (FastAPI port of Spring Boot server)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [{ name = "Rooti Team" }]
license = { text = "Proprietary" }

dependencies = [
  # ---------- Web framework ----------
  "fastapi>=0.136.0",                  # starlette 1.x 호환 버전
  "starlette>=1.0.1",                  # PYSEC-2026-161 (DoS) 패치 — 1.0.1+ 강제
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.17",          # multipart/form-data (file upload, 50MB/100MB)
  "orjson>=3.10.10",                   # 빠른 JSON 직렬화 (Jackson 대체)

  # ---------- Config / validation ----------
  "pydantic[email]>=2.9.2",            # EmailStr 사용 → email-validator 포함
  "pydantic-settings>=2.6.1",          # @ConfigurationProperties 대체

  # ---------- Persistence ----------
  "sqlalchemy[asyncio]>=2.0.36",       # JPA + Hibernate 대체
  "asyncpg>=0.30.0",                   # PostgreSQL async driver (pgjdbc 대체)
  "alembic>=1.13.3",                   # 향후 마이그레이션 도구 (Flyway 와 병행 가능, 당장은 미사용)

  # ---------- Cache ----------
  "redis[hiredis]>=5.2.0",             # spring-data-redis 대체 (async 지원)

  # ---------- Security / JWT ----------
  "pyjwt[crypto]>=2.10.0",             # jjwt 대체
  "passlib[bcrypt]>=1.7.4",            # BCryptPasswordEncoder 대체
  "bcrypt>=4.2.0",

  # ---------- Push / Email ----------
  "firebase-admin>=6.5.0",             # 동일 SDK (Python)
  "resend>=2.4.0",                     # Resend 트랜잭셔널 이메일

  # ---------- Document generation ----------
  "weasyprint>=63.0",                  # OpenHTMLtoPDF 대체 (HTML+CSS -> PDF)
  "jinja2>=3.1.4",                     # HTML 템플릿 (PDF/이메일)
  "openpyxl>=3.1.5",                   # Apache POI 대체 (XLSX 렌더)

  # ---------- Utility ----------
  "python-ulid>=3.0.0",                # ulid-creator 대체
  "phonenumbers>=8.13.50",             # libphonenumber 동일 포트
  "httpx>=0.27.2",                     # 외부 HTTP 호출 (RestTemplate/WebClient 대체)

  # ---------- AWS / Rate limit ----------
  "aioboto3>=13.2.0",                  # S3 storage driver (async)
  "slowapi>=0.1.9",                    # Rate limit (Redis backend, ASGI compatible)

  # ---------- Observability ----------
  "structlog>=24.4.0",                 # logstash-logback-encoder 대체 (JSON 구조 로그)
  "prometheus-client>=0.21.0",         # 직접 사용 (instrumentator 는 starlette<1.0.0 강제해서 제거)
]

[project.optional-dependencies]
dev = [
  # ---------- Test ----------
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.2",                     # FastAPI TestClient async
  "asgi-lifespan>=2.1.0",              # lifespan in tests
  "testcontainers[postgresql,redis]>=4.8.2",  # Testcontainers (Java 와 동일)
  "freezegun>=1.5.1",                  # 시간 고정 (KST 테스트)
  "faker>=30.8.2",

  # ---------- Lint / type ----------
  "ruff>=0.7.4",                       # Spotless + checkstyle 대체
  "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:passlib.*",       # passlib + bcrypt 호환 경고
  "ignore::pytest.PytestUnraisableExceptionWarning",  # testcontainers 소켓 cleanup
  "ignore::ResourceWarning",                    # subprocess/socket cleanup 잡소리
]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["build/", ".venv/", "src/"]  # Java 디렉토리는 제외

[[tool.mypy.overrides]]
module = ["weasyprint.*", "firebase_admin.*", "phonenumbers.*", "testcontainers.*"]
ignore_missing_imports = true

# ---------- coverage ----------
[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
