# =============================================================================
#  Rooti-Server (Python / FastAPI) — pyproject.toml
#
#  - 패키지/가상환경 관리: Poetry  (poetry install / poetry run …)
#  - Python 3.12  (>=3.12,<3.13)
#  - DB 스키마: migrations/V*.sql  (psql \i 또는 make server-migrate)
#  - API 응답 envelope 은 구 Java ApiResponse / PageResponse 와 1:1 동일
#
#  메타데이터/런타임 의존성은 PEP 621 [project] 에, dev 도구는 Poetry dev 그룹에 둔다.
#  앱(배포 대상)이라 non-package 모드 — poetry install 은 의존성만 설치하고 app/ 은
#  프로젝트 루트에서 임포트한다(pytest pythonpath, uvicorn --app-dir 기본값).
# =============================================================================
[project]
name = "rooti-server"
version = "1.0.0"
description = "Rooti backend (FastAPI service)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
authors = [{ name = "Rooti Team" }]
license = "LicenseRef-Proprietary"

dependencies = [
  # ---------- Web framework ----------
  "fastapi>=0.136.0",                  # starlette 1.x 호환 버전
  "starlette>=1.2.1",                  # PYSEC-2026-161 (DoS) 패치 — 1.0.1+ 강제
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.30",          # multipart/form-data (file upload)
  "orjson>=3.10.10",                   # 빠른 JSON 직렬화 (Jackson 대체)

  # ---------- Config / validation ----------
  "pydantic[email]>=2.9.2",            # EmailStr → email-validator 포함
  "pydantic-settings>=2.6.1",          # @ConfigurationProperties 대체

  # ---------- Persistence ----------
  "sqlalchemy[asyncio]>=2.0.36",       # JPA + Hibernate 대체
  "greenlet>=3.0.0",                   # SQLAlchemy async 런타임 필수 (플랫폼 마커로 누락 방지)
  "asyncpg>=0.30.0",                   # PostgreSQL async driver (pgjdbc 대체)
  "alembic>=1.13.3",                   # 향후 마이그레이션 도구 (당장은 미사용)

  # ---------- Cache ----------
  "redis[hiredis]>=5.2.0",             # spring-data-redis 대체 (async)

  # ---------- Security / JWT ----------
  "pyjwt[crypto]>=2.10.0",             # jjwt 대체
  "passlib[bcrypt]>=1.7.4",            # BCryptPasswordEncoder 대체
  "bcrypt>=4.2.0",

  # ---------- Push / Email ----------
  "firebase-admin>=6.5.0",             # FCM (동일 SDK)
  "resend>=2.4.0",                     # Resend 트랜잭셔널 이메일

  # ---------- Document generation ----------
  "weasyprint>=63.0",                  # OpenHTMLtoPDF 대체 (HTML+CSS -> PDF)
  "jinja2>=3.1.4",                     # HTML 템플릿 (PDF/이메일)
  "openpyxl>=3.1.5",                   # Apache POI 대체 (XLSX 렌더)

  # ---------- Utility ----------
  "python-ulid>=3.0.0",                # ulid-creator 대체
  "phonenumbers>=8.13.50",             # libphonenumber 동일 포트
  "httpx>=0.27.2",                     # 외부 HTTP 호출 (RestTemplate/WebClient 대체)

  # ---------- AWS / Rate limit ----------
  "aioboto3>=13.2.0",                  # S3 storage driver (async)
  "slowapi>=0.1.9",                    # Rate limit (Redis backend, ASGI)

  # ---------- Observability ----------
  "structlog>=24.4.0",                 # logstash-logback-encoder 대체 (JSON 로그)
  "prometheus-client>=0.21.0",         # 직접 사용
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
# ---------- Test ----------
pytest = ">=8.3.3"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=6.0.0"
asgi-lifespan = ">=2.1.0"                                # lifespan in tests
testcontainers = { version = ">=4.8.2", extras = ["postgresql", "redis"] }  # 실 DB 통합 테스트
freezegun = ">=1.5.1"                                    # 시간 고정 (KST 테스트)
faker = ">=30.8.2"

# ---------- Lint / type / audit ----------
ruff = ">=0.7.4"                                         # Spotless + checkstyle 대체
mypy = ">=1.13.0"
pip-audit = ">=2.7.3"                                    # 의존성 CVE 스캔 (CI audit)

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["."]                                       # non-package 모드: app/ 을 루트에서 임포트
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:passlib.*",       # passlib + bcrypt 호환 경고
  "ignore::pytest.PytestUnraisableExceptionWarning",  # testcontainers 소켓 cleanup
  "ignore::ResourceWarning",                    # subprocess/socket cleanup 잡소리
]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["build/", ".venv/"]

[[tool.mypy.overrides]]
module = ["weasyprint.*", "firebase_admin.*", "phonenumbers.*", "testcontainers.*"]
ignore_missing_imports = true

# ---------- coverage ----------
[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
